--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -1,12 +1,13 @@
 multibranch_job:
-  - giturl: git@github.com:xingmin860818/xxxxxxjenkins_management.git
-    gitcredentialsId: 7bc6cda9-a250-4d99-962c-e2ede002db06
-    branch_regex: xxxxxxxxxx|yyyyyyyyyyyy
-    view_name: xxx
-  - giturl: git@github.com:xingmin860818/yyyyyyjenkins_management.git
-    gitcredentialsId: 7bc6cda9-a250-4d99-962c-e2ede002db06
-    branch_regex: aaaaaaaaaaaaa|bbbbbbbbbbbbb
-    view_name: yyy
+  nano:
+    - giturl: git@github.com:xingmin860818/xxxxxxjenkins_management.git
+      gitcredentialsId: 7bc6cda9-a250-4d99-962c-e2ede002db06
+      branch_regex: xxxxxxxxxx|yyyyyyyyyyyy
+      view_name: xxx
+    - giturl: git@github.com:xingmin860818/yyyyyyjenkins_management.git
+      gitcredentialsId: 7bc6cda9-a250-4d99-962c-e2ede002db06
+      branch_regex: aaaaaaaaaaaaa|bbbbbbbbbbbbb
+      view_name: yyy
 
 view_template:
     - viewname: TESTC
